--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "sass": "^1.39.0",
+    "sass-loader": "^10",
+    "vue": "^2.6.11",
+    "vue-document-editor": "^1.2.5",
+    "vue-file-toolbar-menu": "^1.3.4",
+    "vuex": "^3.6.2",
+    "vuex-pathify": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
