--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "sass": "^1.39.0",
+    "sass": "~1.32",
     "sass-loader": "^10",
     "vue": "^2.6.11",
     "vue-document-editor": "^1.2.5",
     "vue-file-toolbar-menu": "^1.3.4",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.5.2",
+    "vuetify": "^2.5.8",
     "vuex": "^3.6.2",
-    "vuex-pathify": "^1.5.1"
+    "vuex-pathify": "^1.5.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
