--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@mdi/js": "^6.1.95",
     "core-js": "^3.6.5",
+    "mdi-vue": "^3.0.7",
     "sass": "~1.32",
     "sass-loader": "^10",
     "vue": "^2.6.11",
     "vue-document-editor": "^1.2.5",
     "vue-file-toolbar-menu": "^1.3.4",
+    "vue-material-design-icons": "^4.13.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.2",
     "vuetify": "^2.5.8",
