--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "masterdoc2",
-  "version": "0.1.0",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,8 +15,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@mdi/js": "^6.1.95",
+    "axios": "^0.22.0",
+    "bootstrap-scss": "^5.1.1",
+    "bootstrap-vue": "^2.21.2",
+    "bootstrap.native": "^4.0.6",
     "core-js": "^3.6.5",
+    "csv-parse": "^4.16.3",
+    "csv-parser": "^3.0.0",
+    "fs": "^0.0.1-security",
     "mdi-vue": "^3.0.7",
+    "moment": "^2.29.1",
+    "res": "^0.4.0",
     "sass": "~1.32",
     "sass-loader": "^10",
     "vue": "^2.6.11",
